<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_appl_appl_busshedule"
        android:textSize="13sp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_appl_base_tables"
        android:textSize="13sp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_appl_send_group_VK"
        android:layout_weight="0.5"
        android:textSize="13sp"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:paddingRight="5dp" />

    <TextView
        android:id="@+id/id_textView_GoToVKSupport2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/about_appl_https_vk_com_auto_kalinkovichi"
        android:textColor="@color/color_for_text_toolbar"
        android:layout_weight="1"
        android:textSize="14sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:src="@drawable/warning_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_appl_now_know"
            android:textSize="13sp"
            android:paddingLeft="5dp"
            android:paddingTop="8dp"
            android:paddingBottom="5dp"
            android:paddingRight="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:src="@drawable/warning_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_appl_not_responsibility"
            android:textSize="13sp"
            android:paddingLeft="5dp"
            android:paddingTop="8dp"
            android:paddingRight="5dp" />

    </LinearLayout>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_appl_inform_spravka"
        android:textSize="13sp"
        android:paddingLeft="10dp"
        android:paddingTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">




    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/about_appl_author"
        android:textSize="13sp" />


</LinearLayout>
</ScrollView>